# ucity-advance

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  assets.sh  compiling.rst  gen_maps.sh  manual.rst  palette.aseprite  readme.rst
audio/: build.jfxr  build_error.jfxr  clear.jfxr  demolish.jfxr  menu.mod  title.mod  wrong_selection.jfxr
audio/songs/0_village/: no_energy.mod  no_energy.txt
audio/songs/1_town/: balthasar.mod  balthasar.txt
audio/songs/2_city/: the_mssing_lnk.mod  the_mssing_lnk.txt
audio/songs/4_capital/: improv.mod  improv.txt
audio/songs/gbc/: city.mod
audio/songs/intro/: tecjazz.mod  tecjazz.txt
audio/songs/menu/: schwing.mod  schwing.txt
cmake/: toolchain_gba.cmake  toolchain_host.cmake
gba/: CMakeLists.txt
graphics/: text.grit
licenses/: cc-by-nc-sa-4.0.txt
maps/: bank_offer_menu_bg.tmx  bank_repay_menu_bg.tmx  budget_menu_bg.tmx  city_stats_bg.tmx  convert.sh  credits_bg.tmx  generate_map_bg.tmx  graphs_frame_bg.tmx  main_menu_bg.tmx  minimap_frame_bg.tmx  name_input_menu_bg.tmx  pause_menu_bg.tmx  save_menu_bg.tmx  scenario_0_rock_river.tmx  scenario_1_boringtown.tmx  scenario_2_portville.tmx  scenario_3_newdale.tmx  scenario_selection_bg.tmx  test_map.tmx  text.tsx
maps/buildings/: 122_stadium.ase  157_university.ase  182_museum.ase  244_power_plant_oil.ase  280_power_plant_nuclear.ase  296_power_plant_fusion.ase  444_industrial_3x3.ase  convert.sh
maps/buildings_gbc/: convert.sh
maps/city/: convert.sh  gen_maps.sh  scenario_0_rock_river.tmx  scenario_1_boringtown.tmx  scenario_2_portville.tmx  scenario_3_newdale.tmx  scenario_4_central.tmx  scenario_5_futura.tmx  test_map.tmx
maps/intro/: convert.sh  ucity_logo.ase  ucity_logo_blue.ase
maps/menus/: bank_offer_menu_bg.tmx  bank_repay_menu_bg.tmx  budget_menu_bg.tmx  city_stats_bg.tmx  convert.sh  credits_bg.tmx  gen_maps.sh  generate_map_bg.tmx  main_menu_bg.tmx  menus_tileset.ase  menus_tileset.tsx  minimap_frame_bg.tmx  name_input_menu_bg.tmx  save_menu_bg.tmx  scenario_selection_bg.tmx
maps/status_bar/: convert.sh  gen_maps.sh  notification_bg.tmx  text.ase  text.tsx
sdl2/: CMakeLists.txt  compiler_flags.cmake
source/: audio.c  audio.h  cursor.c  cursor.h  date.c  date.h  input_utils.c  input_utils.h  jukebox.c  jukebox.h  main.c  main.h  map_utils.c  map_utils.h  money.c  money.h  random.c  random.h  save.c  save.h  sfx.c  sfx.h  text_utils.c  text_utils.h
source/room_bank/: room_bank.c  room_bank.h
source/room_budget/: room_budget.c  room_budget.h
source/room_city_stats/: room_city_stats.c  room_city_stats.h
source/room_credits/: room_credits.c  room_credits.h
source/room_game/: build_menu.c  build_menu.h  building_info.c  building_info.h  draw_building.c  draw_building.h  draw_common.c  draw_common.h  draw_port.c  draw_port.h  draw_power_lines.c  draw_power_lines.h  draw_road.c  draw_road.h  draw_train.c  draw_train.h  notification_box.c  notification_box.h  pause_menu.c  pause_menu.h  room_game.c  room_game.h  status_bar.c  status_bar.h  text_messages.c  text_messages.h  tileset_info.c  tileset_info.h
source/room_gen_map/: generate_map.c  generate_map.h  generate_map_circle.c  generate_map_circle.h  room_gen_map.c  room_gen_map.h
source/room_graphs/: graphs_handler.c  graphs_handler.h  room_graphs.c  room_graphs.h
source/room_input/: room_input.c  room_input.h
source/room_intro/: room_intro.c  room_intro.h
source/room_main_menu/: room_main_menu.c  room_main_menu.h
source/room_minimap/: room_minimap.c  room_minimap.h
source/room_save_slots/: room_save_slots.c  room_save_slots.h
source/room_scenarios/: room_scenarios.c  room_scenarios.h
source/simulation/: anim_boats.c  anim_boats.h  anim_planes.c  anim_planes.h  anim_trains.c  anim_trains.h  budget.c  budget.h  building_count.h  building_density.c  building_density.h  calculate_stats.c  calculate_stats.h  common.c  common.h  create_buildings.c  create_buildings.h  fire.c  fire.h  happiness.c  happiness.h  meltdown.c  meltdown.h  pollution.c  pollution.h  power.c  power.h  queue.c  queue.h  services.c  services.h  simulation_anim_boats.c  simulation_anim_boats.h  simulation_anim_planes.c  simulation_anim_planes.h  simulation_anim_trains.c  simulation_anim_trains.h  simulation_building_count.c  simulation_building_count.h  simulation_calculate_stats.c  (+34 more)
sprites/: convert.sh  palette.aseprite
sprites/building_menu/: convert.sh
sprites/building_menu_gbc/: convert.sh
sprites/graphs_menu/: convert.sh
sprites/graphs_menu_gbc/: convert.sh
sprites/minimap_menu/: convert.sh
sprites/minimap_menu_gbc/: convert.sh
tools/: CMakeLists.txt
tools/bin2c/: CMakeLists.txt  bin2c.c
tools/png2maps/: CMakeLists.txt  png2maps.c
tools/png2sprites/: CMakeLists.txt  png2sprites.c
tools/pngs2strip/: CMakeLists.txt  pngs2strip.c
tools/tiled/: MapWriter.py
